# whatsapp-bot

./: .env.example  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  run.bat  run.ps1
docs/: GETTING_STARTED.md  gcp_setup.md
src/ai_companion/: settings.py
src/ai_companion/core/: prompts.py
src/ai_companion/graph/: edges.py  graph.py  nodes.py  state.py
src/ai_companion/graph/utils/: chains.py  helpers.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/interfaces/whatsapp/: whatsapp_response.py
src/ai_companion/modules/speech/: text_to_speech.py
